traces/bug_561.txt
src/femlib/Mesh3dn.cpp:659: error: DEAD_STORE
  The value written to &bin (type int) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:659:2: Write of unused value
657.         strcat(fileb,".meshb");
658.         if( (inm=GmfOpenMesh(pfile=fileb, GmfRead,&ver,&dim)) ) 
659.   	bin=true;
        ^
660.         else if( (inm=GmfOpenMesh(pfile=filef, GmfRead,&ver,&dim)) ) 
661.   	bin=false;
